@@ -19,6 +19,7 @@ https://github.com/elastic/apm-server/compare/71df0d96445df35afe27f38bcf734a0828
 ==== Bug fixes
 - Updated systemd doc url {pull}354[354]
 - Updated readme doc urls {pull}356[356]
+- Use updated stack trace frame values for calculating error `grouping_keys` {pull}485[485] 
 
 ==== Added
 - Include build time and revision in version information {pull}396[396]
